# is_xyz_faster

./: README.md
cxx/are_search_trees_faster/: AvlTree.h  CMakeLists.txt  ISearchTree.h  SearchTree.h  SortedAssociationVector.h  StandardMapWrapper.h  main.cc  test.cc
cxx/is_emplace_back_faster/: CMakeLists.txt  main.cc  main2.cc
